# tflitec-rs

./: Cargo.toml  build.rs
include/: common.h
src/: interpreter.rs  lib.rs  model.rs  tensor.rs
